--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,80 @@
-selenium=4.16.0
+accelerate==0.25.0
+appnope==0.1.3
+asttokens==2.4.1
+attrs==23.2.0
+beautifulsoup4==4.12.2
+black==23.12.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.1
+debugpy==1.8.0
+decorator==5.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
+filelock==3.13.1
+fsspec==2023.12.2
+geographiclib==2.0
+geopy==2.4.1
+h11==0.14.0
+huggingface-hub==0.20.2
+idna==3.6
+ipykernel==6.28.0
+ipython==8.19.0
+jedi==0.19.1
+Jinja2==3.1.2
+jupyter_client==8.6.0
+jupyter_core==5.7.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+networkx==3.2.1
+numpy==1.26.3
+outcome==1.3.0.post0
+packaging==23.2
+pandas==2.1.4
+parso==0.8.3
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.43
+psutil==5.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+PySocks==1.7.1
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.2
+regex==2023.12.25
+requests==2.31.0
+safetensors==0.4.1
+selenium==4.16.0
+shapely==2.0.2
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.3
+sympy==1.12
+tokenizers==0.15.0
+tomli==2.0.1
+torch==2.1.2
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+transformers==4.36.2
+trio==0.23.2
+trio-websocket==0.11.1
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
+wcwidth==0.2.12
+webdriver-manager==4.0.1
+wsproto==1.2.0
