--- a/config.yaml
+++ b/config.yaml
@@ -4,14 +4,36 @@ target_location: ""
 travel_time_radius: 2000  # in seconds
 london_boroughs:
   - "Newham (London Borough)"
+  - "Tower Hamlets (London Borough)"
+  - "Central London"
+  - "Kensington And Chelsea (Royal Borough)"
+  - "Kennington, South East London"
+  - "Camden (London Borough)"
+  - "Islington (London Borough)"
+  - "Hackney (London Borough)"
+  - "Manor House Station"
+  - "Canary Wharf, East London"
   # Add other boroughs as needed
 scraper_settings:
   min_price: "2400"
-  max_price: "3000"
+  max_price: "2900"
   min_bedrooms: "2"
   max_bedrooms: "3"
   min_bathrooms: 2
   property_type: "flat"
   min_let_date: "04/02/2024"
-floorplan_area_threshold: 800.0
+  floorplan_required: False
+  max_days_since_added: "1" # can be 1, 3, 7, 14 or Anytime
+  exclude:
+    - "E3"
+    - "E16"
+    - "E1"
+    - "Bethnal Green"
+    - "High Street"
+    # - "Royal Wharf"
+    - "Royal Victoria"
+    - "Canning Town"
+    - "Stratosphere Tower"
+    - "New Providence Wharf, Fairmont Avenue"
+floorplan_area_threshold: 770.0
 qa_prompt: "What is the total gross internal floor area in square feet (sq ft)?"
