--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,69 @@
 accelerate==0.25.0
+aiohttp==3.9.1
+aiosignal==1.3.1
+alembic==1.13.1
 appnope==0.1.3
 asttokens==2.4.1
+async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.2
 black==23.12.1
+blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==3.0.0
 comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+databricks-cli==0.18.0
+datasets==2.16.1
 debugpy==1.8.0
 decorator==5.1.1
+dill==0.3.7
+docker==7.0.0
+engineering-notation==0.10.0
+entrypoints==0.4
 exceptiongroup==1.2.0
 executing==2.0.1
 filelock==3.13.1
-fsspec==2023.12.2
+Flask==3.0.1
+fonttools==4.47.2
+frozenlist==1.4.1
+fsspec==2023.10.0
 geographiclib==2.0
 geopy==2.4.1
+gitdb==4.0.11
+GitPython==3.1.41
+gunicorn==21.2.0
 h11==0.14.0
 huggingface-hub==0.20.2
 idna==3.6
+importlib-metadata==7.0.1
 ipykernel==6.28.0
 ipython==8.19.0
+isort==5.13.2
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 jupyter_client==8.6.0
 jupyter_core==5.7.0
+kiwisolver==1.4.5
+Mako==1.3.0
+Markdown==3.5.2
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 matplotlib-inline==0.1.6
+mlflow==2.10.0
 mpmath==1.3.0
+multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 networkx==3.2.1
 numpy==1.26.3
+oauthlib==3.2.2
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.4
@@ -41,10 +73,15 @@ pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
+protobuf==4.25.2
 psutil==5.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==15.0.0
+pyarrow-hotfix==0.6
 Pygments==2.17.2
+PyJWT==2.8.0
+pyparsing==3.1.1
 PySocks==1.7.1
 pytesseract==0.3.10
 python-dateutil==2.8.2
@@ -52,17 +89,26 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.2
+querystring-parser==1.2.4
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.1
+scikit-learn==1.4.0
+scipy==1.12.0
 selenium==4.16.0
+sentencepiece==0.1.99
 shapely==2.0.2
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
+SQLAlchemy==2.0.25
+sqlparse==0.4.4
 stack-data==0.6.3
 sympy==1.12
+tabulate==0.9.0
+threadpoolctl==3.2.0
 tokenizers==0.15.0
 tomli==2.0.1
 torch==2.1.2
@@ -77,4 +123,8 @@ tzdata==2023.4
 urllib3==2.1.0
 wcwidth==0.2.12
 webdriver-manager==4.0.1
+Werkzeug==3.0.1
 wsproto==1.2.0
+xxhash==3.4.1
+yarl==1.9.4
+zipp==3.17.0
